# 3DViewer-1.0

./: .gitignore  README.md
src/: CMakeLists.txt  Doxyfile  Makefile  VALGRIND  main.cc  main.cpp
src/controller/: controller.cc  controller.h  facade.h  operation_result.h
src/docs/html/: annotated.html  background__box_8h_source.html  classBackgroundBox-members.html  classBackgroundBox.html  classBackgroundBox__inherit__graph.dot  classControlWindow-members.html  classControlWindow.html  classControlWindow__coll__graph.dot  classElemBox-members.html  classElemBox.html  classElemBox__coll__graph.dot  classInfoWindow-members.html  classInfoWindow.html  classInfoWindow__coll__graph.dot  classMainWindow-members.html  (+113 more)
src/model/: base_filereader.h  data_structures.h  exceptions.h  facade.cc  facade.h  filereader.cc  filereader.h  normalization_param.h  scene.cc  scene.h  scene_mesh_data.h  scene_parameters.h
src/view/: BackgroundBox.h  CMakeLists.txt  CentralWindow.h  CollapseButton.h  ControlWindow.h  ElemBox.h  InfoWindow.h  MainWindow.cc  MainWindow.cpp  MainWindow.h  ProjectionButton.h  RenderSetting.h  SlidersBox.h  UserSetting.h  Viewport3D.h  background_box.cc  background_box.h  control_window.cc  control_window.h  elem_box.cc  elem_box.h  info_window.cc  info_window.h  main.cpp  main_window.cc  main_window.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  myopenglwidget.cpp  myopenglwidget.h  sliders_box.cc  sliders_box.h  user_setting.cc  user_setting.h  viewport3D.cc  viewport3D.h
src2/: MainWindow.cpp  MainWindow.h  Makefile  Viewport3D.h  main.cpp
(+138 files in other folders)
